Initial Panama Rewrite